# hoot-course

./: .gitignore  Makefile  Makefile.am  README.org  configure.ac  hoot-compiler.org  minimal-init.el  sample-init.el
examples/: eqlist.scm  factorial.scm  fibonacci.scm  insertg-r.scm  leftmost.scm  list-reverse.scm  member-star.scm  multirember.scm  numbered.scm  occur.scm  rember.scm  value.scm
public/: todo-app.html
scripts/: compile_to_wasm.sh  create_scheme_file.sh  lint.sh  run.sh  run_tests.sh  setup.sh
src/: hello-world.scm  todo-app.scm
tests/: test-eqlist.scm  test-factorial.scm  test-fibonacci.scm  test-insertg-r.scm  test-leftmost.scm  test-list-reverse.scm  test-member-star.scm  test-multirember.scm  test-numbered.scm  test-occur.scm  test-rember.scm  test-value.scm
